--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -109,23 +109,7 @@ fieldset:nth-of-type(1) label {
 	display: inline-block;
 }
 
-::-webkit-input-placeholder {
-	color: #bec2c5;
-	text-align: right;
-	font-style: italic;
-	font-size: .75em;
-	padding: 1.5em;
-}
-
-::-moz-placeholder {
-	color: #bec2c5;
-	text-align: right;
-	font-style: italic;
-	font-size: .75em;
-	padding: 1.5em;
-}
-
-:-ms-input-placeholder {
+input::placeholder {
 	color: #bec2c5;
 	text-align: right;
 	font-style: italic;
